TSFF-817: Tilpasninger for å få fordel med i Verdikjede